--- a/xbmc/visualizations/XBMCProjectM/Makefile.in
+++ b/xbmc/visualizations/XBMCProjectM/Makefile.in
@@ -2,6 +2,7 @@ ARCH=@ARCH@
 INCLUDES=-I. -I../../addons/include
 OBJS=Main.o
 SLIB=../../../addons/visualization.projectm/projectM.vis
+PRESETS=../../../addons/visualization.projectm/
 DEFINES+=-DHAS_SDL_OPENGL -DHAS_SDL
 CXXFLAGS=-fPIC
 DIRS=libprojectM
@@ -14,14 +15,14 @@ $(SLIB): $(OBJS) libprojectM/libprojectM.dylib
 		./libprojectM/CMakeFiles/projectM.dir/*.o \
 		$(OBJS)
 	../../../tools/Mach5/wrapper.rb $@;mv output.so $@
-	rsync -lptgoDv --cvs-exclude libprojectM/presets/* ../../../visualisations/projectM
+	rsync -lptgoDv --cvs-exclude libprojectM/presets/* $(PRESETS)
 
 libprojectM/libprojectM.dylib:
 	$(MAKE) -C libprojectM
 else
 $(SLIB): $(OBJS) libprojectM/libprojectM.so
 	$(CXX) $(CXXFLAGS) ./libprojectM/CMakeFiles/projectM.dir/*.o -fPIC -shared -o $(SLIB) $(OBJS) `cat ../../cores/DllLoader/exports/wrapper.def` ../../cores/DllLoader/exports/wrapper.o
-	cp -rfT libprojectM/presets ../../../visualisations/projectM
+	cp -rfT libprojectM/presets $(PRESETS)
 
 libprojectM/libprojectM.so: 
 	$(MAKE) -C libprojectM
