--- a/configure.in
+++ b/configure.in
@@ -240,31 +240,31 @@ AC_ARG_ENABLE([external-ffmpeg],
             [AS_HELP_STRING([--enable-external-ffmpeg],
             [enable use of external ffmpeg libraries (default is no) 'Linux only'])],
             [use_external_ffmpeg=$enableval],
-            [use_external_ffmpeg=no])
+            [use_external_ffmpeg=$use_external_libraries])
 
 AC_ARG_ENABLE([external-liba52],
             [AS_HELP_STRING([--enable-external-liba52],
             [enable use of external liba52 library (default is no) 'Linux only'])],
             [use_external_liba52=$enableval],
-            [use_external_liba52=no])
+            [use_external_liba52=$use_external_libraries])
 
 AC_ARG_ENABLE([external-libdts],
             [AS_HELP_STRING([--enable-external-libdts],
             [enable use of external libdts library (default is no) 'Linux only'])],
             [use_external_libdts=$enableval],
-            [use_external_libdts=no])
+            [use_external_libdts=$use_external_libraries])
 
 AC_ARG_ENABLE([external-libass],
             [AS_HELP_STRING([--enable-external-libass],
             [enable use of external libass library (default is no) 'Linux only'])],
             [use_external_libass=$enableval],
-            [use_external_libass=no])
+            [use_external_libass=$use_external_libraries])
 
 AC_ARG_ENABLE([external-python],
             [AS_HELP_STRING([--enable-external-python],
             [enable use of external python library (default is no) 'Linux only'])],
             [use_external_python=$enableval],
-            [use_external_python=no])
+            [use_external_python=$use_external_libraries])
 
 ### End of external library options
 
@@ -635,17 +635,8 @@ else
 fi
 
 ### External libraries checks
-if test "$use_external_libraries" = "yes"; then
-  AC_MSG_NOTICE($external_libraries_enabled)
-  USE_EXTERNAL_LIBRARIES=1
-  AC_DEFINE([USE_EXTERNAL_LIBRARIES], [1], [Whether to use external libraries.])
-else
-  AC_MSG_NOTICE($external_libraries_disabled)
-  USE_EXTERNAL_LIBRARIES=0
-fi
-
 # External FFmpeg
-if test "$use_external_libraries" = "yes" || test "$use_external_ffmpeg" = "yes"; then
+if test "$use_external_ffmpeg" = "yes"; then
   AC_CHECK_LIB([avcodec],          [main],, AC_MSG_ERROR($missing_library))
   AC_CHECK_LIB([avformat],         [main],, AC_MSG_ERROR($missing_library))
   AC_CHECK_LIB([avutil],           [main],, AC_MSG_ERROR($missing_library))
@@ -694,7 +685,7 @@ else
 fi
 
 # External liba52
-if test "$use_external_libraries" = "yes" || test "$use_external_liba52" = "yes"; then
+if test "$use_external_liba52" = "yes"; then
   AC_CHECK_LIB([a52],          [main],, AC_MSG_ERROR($missing_library))
 
   AC_MSG_NOTICE($external_liba52_enabled)
@@ -706,7 +697,7 @@ else
 fi
 
 # External libdts
-if test "$use_external_libraries" = "yes" || test "$use_external_libdts" = "yes"; then
+if test "$use_external_libdts" = "yes"; then
   AC_CHECK_LIB([dts],          [main],, AC_MSG_ERROR($missing_library))
 
   AC_MSG_NOTICE($external_libdts_enabled)
@@ -718,7 +709,7 @@ else
 fi
 
 # External libass
-if test "$use_external_libraries" = "yes" || test "$use_external_libass" = "yes"; then
+if test "$use_external_libass" = "yes"; then
   # We need libass >= 0.9.7.
   AC_CHECK_LIB([ass], [ass_set_message_cb],
   [AC_CHECK_LIB([ass], [main],,)
@@ -733,7 +724,7 @@ else
 fi
 
 # External Python
-if test "$use_external_libraries" = "yes" || test "$use_external_python" = "yes"; then
+if test "$use_external_python" = "yes"; then
   AC_CHECK_LIB([python2.6], [main],
     [AC_DEFINE([HAVE_LIBPYTHON2_6], [1],
     [Define to 1 if you have the `python2.6' library.])
@@ -1140,35 +1131,30 @@ else
 fi
 
 ### External libraries messages
-if test "$use_external_libraries" = "yes"; then
-  final_message="$final_message\n  External Libraries:\tYes"
+if test "$use_external_ffmpeg" = "yes"; then
+  final_message="$final_message\n  External FFmpeg:\tYes"
 else
-  final_message="$final_message\n  External Libraries:\tNo"
-  if test "$use_external_ffmpeg" = "yes"; then
-    final_message="$final_message\n  External FFmpeg:\tYes"
-  else
-    final_message="$final_message\n  External FFmpeg:\tNo"
-  fi
-  if test "$use_external_liba52" = "yes"; then
-    final_message="$final_message\n  External liba52:\tYes"
-  else
-    final_message="$final_message\n  External liba52:\tNo"
-  fi
-  if test "$use_external_libdts" = "yes"; then
-    final_message="$final_message\n  External libdts:\tYes"
-  else
-    final_message="$final_message\n  External libdts:\tNo"
-  fi
-  if test "$use_external_libass" = "yes"; then
-    final_message="$final_message\n  External libass:\tYes"
-  else
-    final_message="$final_message\n  External libass:\tNo"
-  fi
-  if test "$use_external_python" = "yes"; then
-    final_message="$final_message\n  External Python:\tYes"
-  else
-    final_message="$final_message\n  External Python:\tNo"
-  fi
+  final_message="$final_message\n  External FFmpeg:\tNo"
+fi
+if test "$use_external_liba52" = "yes"; then
+  final_message="$final_message\n  External liba52:\tYes"
+else
+  final_message="$final_message\n  External liba52:\tNo"
+fi
+if test "$use_external_libdts" = "yes"; then
+  final_message="$final_message\n  External libdts:\tYes"
+else
+  final_message="$final_message\n  External libdts:\tNo"
+fi
+if test "$use_external_libass" = "yes"; then
+  final_message="$final_message\n  External libass:\tYes"
+else
+  final_message="$final_message\n  External libass:\tNo"
+fi
+if test "$use_external_python" = "yes"; then
+  final_message="$final_message\n  External Python:\tYes"
+else
+  final_message="$final_message\n  External Python:\tNo"
 fi
 
 OUTPUT_FILES="Makefile \
@@ -1250,7 +1236,6 @@ AC_SUBST(DEBUG_FLAGS)
 AC_SUBST(SDL_DEFINES)
 AC_SUBST(BUILD_DVDCSS)
 AC_SUBST(BUILD_GOOM)
-AC_SUBST(USE_EXTERNAL_LIBRARIES)
 AC_SUBST(USE_EXTERNAL_FFMPEG)
 AC_SUBST(USE_EXTERNAL_LIBA52)
 AC_SUBST(USE_EXTERNAL_LIBDTS)
